integrated patch by elakito to support multiple projects https://github.com/elakito

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@
 #
 log4j.rootLogger=INFO, out
 
-# uncomment the following line to turn on Camel debugging
+# uncomment the following line to turn orgName Camel debugging
 #log4j.logger.org.apache.camel=DEBUG
 
 log4j.logger.org.springframework=WARN
