--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,9 +26,19 @@
         </init-param>
     </servlet>
 
+    <servlet>
+        <servlet-name>SimpleServlet</servlet-name>
+        <servlet-class>cc.notsoclever.tools.SimpleServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>RestletServlet</servlet-name>
         <url-pattern>/vdiff/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>SimpleServlet</servlet-name>
+        <url-pattern>/diff/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
